# KR_5

./: .gitignore  README.md  classes.py  config.py  main.py  pyproject.toml  utils.py
data/: employers.json
